fix: overflow in mobile devices

--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -20,7 +20,8 @@ body {
   font-family: 'Lato', sans-serif;
   margin: 0;
   height: auto;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -352,6 +353,7 @@ template {
 .terminalStyle {
   width: 45em;
   height: 25em;
+  padding-bottom: 60px;
 }
 
 .circleButton {
@@ -406,6 +408,11 @@ template {
 }
 
 @media (min-width: 850px) {
+  html,
+  body {
+    overflow: hidden;
+  }
+
   .content {
     display: flex;
     height: 100%;
@@ -423,5 +430,21 @@ template {
 @media (max-width: 850px) {
   .terminalStyle {
     height: 15em;
+  }
+}
+
+@media (max-width: 500px) {
+  .terminalWindow {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 350px) {
+  .titleTitle {
+    font-size: 10px;
+  }
+
+  .terminalWindow {
+    font-size: 10px;
   }
 }
